fix taro vero problem

--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "@babel/runtime": "^7.7.7",
     "@nutui/nutui-taro": "^3.1.10",
     "@tarojs/cli": "^3.4.1",
-    "@tarojs/components": "3.4.1",
-    "@tarojs/plugin-html": "3.4.1",
-    "@tarojs/runtime": "3.4.1",
-    "@tarojs/taro": "3.4.1",
+    "@tarojs/components": "^3.4.1",
+    "@tarojs/plugin-html": "^3.4.1",
+    "@tarojs/runtime": "^3.4.1",
+    "@tarojs/taro": "^3.4.1",
     "axios-miniprogram": "^v2.0.0-rc-2",
     "pinia": "^2.0.5",
     "taro-plugin-pinia": "^1.0.0",
@@ -56,9 +56,9 @@
     "@babel/core": "^7.8.0",
     "@commitlint/cli": "^14.1.0",
     "@commitlint/config-conventional": "^14.1.0",
-    "@tarojs/mini-runner": "3.4.1",
+    "@tarojs/mini-runner": "^3.4.1",
     "@tarojs/plugin-vue-devtools": "^3.3.14",
-    "@tarojs/webpack-runner": "3.4.1",
+    "@tarojs/webpack-runner": "^3.4.1",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
@@ -66,9 +66,9 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-plugin-import": "^1.13.3",
-    "babel-preset-taro": "3.4.1",
+    "babel-preset-taro": "^3.4.1",
     "eslint": "^7.32.0",
-    "eslint-config-taro": "3.4.1",
+    "eslint-config-taro": "^3.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^8.0.0",
     "husky": "^7.0.4",
